feat(extract): a Gradle unit gets scip-java's javac plugin from Hobbes's own init script — the oracle's route — then `scip-java aggregate`; Severed-Chains 23.5% → 60.8% recall at 100% precision (C-67 narrowed, ADR-096 amended) — 0.1.10-beta
scip-java's Gradle plugin adds its javac plugin to the `compileOnly`
configuration, which a build that has resolved that configuration at
evaluation time refuses — Severed-Chains, one repo in four on the
2026-08-29 draw, fell to lane A whole. The oracle lane's plugin had
attached to the same build through an init script on each JavaCompile
task's processor path. The helper now attaches scip-java's plugin the
same way (`gradlePlan`, `gradleAttachScript`): the image extracts
`scip-plugin.jar` and `javac-internals.properties` out of the pinned
launcher at build (checksum-pinned); the init script is written beside
the output, the wrapper runs offline under it with a task that lists
what the build resolved in scip-java's own `dependencies.txt` shape,
an empty targetroot is refused with the build's own words, and the
shards are aggregated. Maven is untouched. Under Gradle the aggregator
names no third-party package, so the coverage line reads the build's
listing; Kotlin is not compiled under the plugin.

Severed-Chains re-ingested contained: capture 0.0% → 100.0% of 52,209
sites; regraded against its standing javac key: 29,793/29,793
confirmed, 0 contradicted, recall 23.5% → 60.8%, poison clean —
the first Gradle-built repo in the record with a semantic lane.
spring-petclinic's Gradle build through the route: identical to its
Maven route. Node tests +4. Patch bump in every holder; CHANGELOG;
ADR-096, architecture §3.2, C-67, the call-graph register, the cell
record, the evidence file, the misses record, the claim page, the
comparative data, graphics and tables regenerated (drift test passes);
the "collapsed sits below" example moved to spring-petclinic.

Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://c